Remove old blog posts and blurb

--- a/data/authors.yaml
+++ b/data/authors.yaml
@@ -1,8 +1,5 @@
-'Don Morrison':
-  url: 'https://twitter.com/elskwid'
+'Stjepan Glavina':
+  url: 'https://twitter.com/stjepang'
 
-'Piotr Solnica':
-  url: 'https://twitter.com/_solnic_'
-
-'Mark Rickerby':
-  url: 'https://twitter.com/maetl'
+'Florian Gilcher':
+  url: 'https://twitter.com/argorak'
